--- a/solution/maze_generation.vcxproj.filters
+++ b/solution/maze_generation.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -10,10 +10,19 @@
     <Filter Include="io">
       <UniqueIdentifier>{3D785900-2904-880B-92B2-880B7E5D880B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="math">
+      <UniqueIdentifier>{CF809A7C-BBB7-9B0D-64A4-811050BA170F}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\source\core\maze_generation.h">
+    <ClInclude Include="..\source\core\cell.h">
       <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\core\grid.h">
+      <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\generators\binary_tree.h">
+      <Filter>generators</Filter>
     </ClInclude>
     <ClInclude Include="..\source\generators\kruskal.h">
       <Filter>generators</Filter>
@@ -24,10 +33,19 @@
     <ClInclude Include="..\source\io\io.h">
       <Filter>io</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\math\probability.h">
+      <Filter>math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\source\core\maze_generation.cpp">
+    <ClCompile Include="..\source\core\cell.cpp">
       <Filter>core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\core\grid.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\generators\binary_tree.cpp">
+      <Filter>generators</Filter>
     </ClCompile>
     <ClCompile Include="..\source\generators\kruskal.cpp">
       <Filter>generators</Filter>
@@ -39,5 +57,8 @@
       <Filter>io</Filter>
     </ClCompile>
     <ClCompile Include="..\source\main.cpp" />
+    <ClCompile Include="..\source\math\probability.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
